proj1/tests/other-tests/minz-tests/correct/if_test2.py
a = 3
if a == 1:
	print "a is 1"
elif a == 2:
	print "a is 2"
elif a == 3:
	print "a is 3"
elif a == 4:
	print "a is 4"
else:
	print "else case"
