proj1/tests/other-tests/minz-tests/error/if_else_bad1.py
if True:
	a = 1
else:
	b = 2
else:
	c = 3
